{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 41,
  "lineage": "3ac3a959-b9bb-979e-7ee6-6b8981b07ce3",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:175554084336:network-acl/acl-02de4ccb066e4c8ac",
            "default_network_acl_id": "acl-02de4ccb066e4c8ac",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02de4ccb066e4c8ac",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "175554084336",
            "subnet_ids": [],
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-0b7ca35d7af9cb09d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:175554084336:route-table/rtb-0fcda51f73537453a",
            "default_route_table_id": "rtb-0fcda51f73537453a",
            "id": "rtb-0fcda51f73537453a",
            "owner_id": "175554084336",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7976287603cf9cf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "default"
            },
            "tags_all": {
              "name": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7ca35d7af9cb09d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.self",
            "module.vpc.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:175554084336:security-group/sg-0bd5e65082639a499",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bd5e65082639a499",
            "ingress": [],
            "name": "default",
            "owner_id": "175554084336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-0b7ca35d7af9cb09d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:175554084336:internet-gateway/igw-0b7976287603cf9cf",
            "id": "igw-0b7976287603cf9cf",
            "owner_id": "175554084336",
            "tags": {
              "Name": "Internet"
            },
            "tags_all": {
              "Name": "Internet"
            },
            "vpc_id": "vpc-0b7ca35d7af9cb09d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:175554084336:subnet/subnet-0c8ff9f167d6fb17c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8ff9f167d6fb17c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175554084336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dmz-a"
            },
            "tags_all": {
              "Name": "dmz-a"
            },
            "vpc_id": "vpc-0b7ca35d7af9cb09d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:175554084336:subnet/subnet-0ec14b066e59024df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec14b066e59024df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175554084336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-a"
            },
            "tags_all": {
              "Name": "infra-a"
            },
            "vpc_id": "vpc-0b7ca35d7af9cb09d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:175554084336:vpc/vpc-0b7ca35d7af9cb09d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02de4ccb066e4c8ac",
            "default_route_table_id": "rtb-0fcda51f73537453a",
            "default_security_group_id": "sg-0bd5e65082639a499",
            "dhcp_options_id": "dopt-04a187ef8fb848137",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b7ca35d7af9cb09d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fcda51f73537453a",
            "owner_id": "175554084336",
            "tags": {
              "Name": "acrux"
            },
            "tags_all": {
              "Name": "acrux"
            }
          }
        }
      ]
    }
  ]
}